# mailing_service_project

./: pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
config/: settings.py  urls.py
mailing/: admin.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_options_alter_message_options_and_more.py  0003_alter_mailingattempt_options_alter_mailing_message_and_more.py
mailing/templates/mailing/: about.html  base.html  contacts.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_send_confirmation.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html  recipient_update.html
mailing/templates/mailing/includes/: footer.html  header.html
static/css/: styles.css
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: createsuperuser.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  logout.html  profile.html  profile_edit.html  register.html
